[package]
name = "IRCrust"
description = "Very simplistic library to break an IRCv3 message into something usable."
version = "0.1.0-dev0"
authors = ["Davarice <davarice@protonmail.com>"]
edition = "2018"

[dependencies]

[lib]
name = "ircrust"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.7.0-alpha.1"
features = ["extension-module"]
